--- a/themes/barber-shop.less
+++ b/themes/barber-shop.less
@@ -26,7 +26,7 @@
 		right: -32px;
 		bottom: 0;
 		left: 0;
-		background-image: linear-gradient( 45deg, fade(@white, 0.2) 25%, transparent 25%, transparent 50%, fade(@white, 0.2) 50%, fade(@white, 0.2) 75%, transparent 75%, transparent);
+		background-image: linear-gradient( 45deg, fade(@white, 20%) 25%, transparent 25%, transparent 50%, fade(@white, 20%) 50%, fade(@white, 20%) 75%, transparent 75%, transparent);
 		background-size: 32px 32px;
 		transform: translate3d(0, 0, 0);
 		animation: pace-theme-barber-shop-motion 500ms linear infinite;
