--- a/themes/big-counter.less
+++ b/themes/big-counter.less
@@ -10,19 +10,18 @@
 		width: 5rem;
 		height: 5rem;
 		transform: translate3d(0, 0, 0) !important;
-	}
-	.pace-progress:after {
-		position: absolute;
-		top: 0;
-		right: .5rem;
-		display: block;
-		color: fade(@color, 0.2);
-		content: attr(data-progress-text);
-		text-align: right;
-		font-weight: 100;
-		font-size: 5rem;
-		font-family: "Helvetica Neue", sans-serif;
-		line-height: 1;
+		&:after {
+			position: absolute;
+			top: 0;
+			right: .5rem;
+			display: block;
+			color: fade(@color, 20%);
+			content: attr(data-progress-text);
+			text-align: right;
+			font-weight: 100;
+			font-size: 5rem;
+			line-height: 1;
+		}
 	}
 	&.pace-inactive .pace-progress {
 		display: none;
