--- a/themes/fill-left.less
+++ b/themes/fill-left.less
@@ -3,13 +3,13 @@
 	pointer-events: none;
 	user-select: none;
 	.pace-progress {
-		background-color: fade(@color, 0.2);
 		position: fixed;
-		z-index: -1;
 		top: 0;
 		right: 100%;
 		bottom: 0;
+		z-index: -1;
 		width: 100%;
+		background-color: fade(@color, 20%);
 	}
 	&.pace-inactive {
 		display: none;
