--- a/themes/bounce.less
+++ b/themes/bounce.less
@@ -30,8 +30,8 @@
 		width: 60px;
 		height: 75px;
 		border-radius: 30px / 40px;
-		background-color: fade(@bgcolor, .1);
-		box-shadow: 0 0 20px 35px fade(@bgcolor, .1);
+		background-color: fade(@bgcolor, 10%);
+		box-shadow: 0 0 20px 35px fade(@bgcolor, 10%);
 		transform: scaleY(.3) !important;
 		animation: pace-compress .5s infinite alternate;
 	}
