--- a/themes/center-radar.less
+++ b/themes/center-radar.less
@@ -1,46 +1,46 @@
 @color: #29d;
 .pace {
-	pointer-events: none;
-	user-select: none;
-	z-index: 2000;
 	position: fixed;
-	height: 90px;
-	width: 90px;
-	margin: auto;
 	top: 0;
-	left: 0;
 	right: 0;
 	bottom: 0;
+	left: 0;
+	z-index: 2000;
+	margin: auto;
+	width: 90px;
+	height: 90px;
+	pointer-events: none;
+	user-select: none;
 	.pace-activity {
 		position: fixed;
+		position: absolute;
+		top: -30px;
+		left: -30px;
 		z-index: 2000;
 		display: block;
-		position: absolute;
-		left: -30px;
-		top: -30px;
-		height: 90px;
-		width: 90px;
 		display: block;
+		box-sizing: content-box;
+		width: 90px;
+		height: 90px;
 		border-width: 30px;
 		border-style: double;
 		border-color: @color;
 		border-radius: 50%;
-		box-sizing: content-box;
 		animation: spin 1s linear infinite;
-	}
-	.pace-activity:before {
-		content: ' ';
-		position: absolute;
-		top: 10px;
-		left: 10px;
-		height: 50px;
-		width: 50px;
-		display: block;
-		border-width: 10px;
-		border-style: solid;
-		border-color: @color;
-		border-radius: 50%;
-		box-sizing: content-box;
+		&:before {
+			position: absolute;
+			top: 10px;
+			left: 10px;
+			display: block;
+			box-sizing: content-box;
+			width: 50px;
+			height: 50px;
+			border-width: 10px;
+			border-style: solid;
+			border-color: @color;
+			border-radius: 50%;
+			content: ' ';
+		}
 	}
 	&.pace-inactive .pace-activity {
 		display: none;
