--- a/themes/corner-indicator.less
+++ b/themes/corner-indicator.less
@@ -1,15 +1,15 @@
 @color: #29d;
 @white: #fff;
-@bcolor: fade(#000, 0.2);
+@bcolor: fade(#000, 20%);
 .pace {
 	pointer-events: none;
 	user-select: none;
 	.pace-activity {
-		display: block;
 		position: fixed;
-		z-index: 2000;
 		top: 0;
 		right: 0;
+		z-index: 2000;
+		display: block;
 		width: 300px;
 		height: 300px;
 		background-color: @color;
@@ -17,11 +17,11 @@
 		transform: translateX(100%) translateY(-100%) rotate(45deg);
 		pointer-events: none;
 		&:before, &:after {
-			box-sizing: border-box;
 			position: absolute;
 			bottom: 30px;
 			left: 50%;
 			display: block;
+			box-sizing: border-box;
 			border: 5px solid @white;
 			border-radius: 50%;
 			content: '';
