--- a/themes/loading-bar.less
+++ b/themes/loading-bar.less
@@ -34,16 +34,16 @@
 		font-size: 12px;
 		line-height: 60px;
 		transform: translate3d(0, 0, 0);
-	}
-	.pace-progress:after {
-		position: fixed;
-		top: 4px;
-		right: 0;
-		display: inline-block;
-		padding-right: 16px;
-		width: 45px;
-		content: attr(data-progress-text);
-		text-align: right;
+		&:after {
+			position: fixed;
+			top: 4px;
+			right: 0;
+			display: inline-block;
+			padding-right: 16px;
+			width: 45px;
+			content: attr(data-progress-text);
+			text-align: right;
+		}
 	}
 	.pace-activity {
 		position: absolute;
@@ -53,7 +53,6 @@
 		border-radius: 10px;
 		box-shadow: inset 0 0 0 2px @color, inset 0 0 0 7px @white;
 	}
-	/*
 .pace-progress[data-progress-text="0%"]:after { right: -200px }
 .pace-progress[data-progress-text="1%"]:after { right: -198.14px }
 .pace-progress[data-progress-text="2%"]:after { right: -196.28px }
@@ -155,7 +154,6 @@
 .pace-progress[data-progress-text="98%"]:after { right: -17.72px }
 .pace-progress[data-progress-text="99%"]:after { right: -15.86px }
 .pace-progress[data-progress-text="100%"]:after { right: -14px }
-*/
 	&.pace-inactive {
 		display: none;
 	}
